# awyes

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  action.sh  action.yml  autocomplete.sh  awyes.py  awyes_test.py  deploy.py  docker-compose.yml  entrypoint.sh  index.js  index.tsx  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  version.sh
.github/workflows/: deploy.yml  release.yml
awyes/: __init__.py  autocomplete.sh  awyes.py  awyes_test.py  clients.py  constants.py  deploy.py  deploy_test.py  deployment.py  event.py  function.py  image.py  layer.py  role.py  utils.py
awyes/test_data/: data.yml  good.yml
cloudview/: index.html  package-lock.json  package.json
cloudview/clients/: awyes.ts  package.json
cloudview/front/: package.json
cloudview/src/: App.tsx  main.tsx
cloudview/src/components/: App.tsx  Flow.tsx
