[tool.poetry]
authors = ["trumanpurnell <truman.purnell@gmail.com>"]
description = "Simplify aws deployment"
name = "awyes"
version = "1.0.30"

[tool.poetry.dependencies]
boto3 = "^1.17.62"
python = "^3.7"
requests = "^2.25.1"
docker = "^5.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
