[tool.poetry]
authors = ["trumanpurnell <truman.purnell@gmail.com>"]
description = "Simplify aws deployment"
name = "awyes"
version = "2.1.16"

[tool.poetry.scripts]
deploy = "awyes.deployment:deploy"

[tool.poetry.dependencies]
boto3 = "^1.17.62"
python = "^3.7"
requests = "^2.25.1"
docker = "^5.0.0"
PyYAML = "^5.4.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
